# blindSPOT

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
.claude/: settings.json
community_profiles/: _schema.md  carta-and-platform-data.md  founder-engineer-bloggers.md  hn-collective.md  long-form-references.md  matt-levine-school.md  reddit-tech-collective.md  tax-and-finance-professionals.md  vc-blogosphere.md
data/: source_registry.yaml  tag_taxonomy_seed.yaml
data/_archive/: source_registry-v1.yaml  tag_taxonomy_seed-v1.yaml
data/static/: 1p3a-phd-to-industry-curated.md  holloway-equity-guide.md  oneponethreeacres-curated.md  zhihu-haigui-curated.md
docs/evals/: baseline-attempt-20260517.md  in-progress-20260517-200642.md  in-progress-20260517T201229Z.md  run-3-error-20260517.md
docs/specs/: 2026-05-13-blindspot-v1-design.md  2026-05-16-blindspot-roadmap.md  ROADMAP.md
domain_knowledge/: _meta_ontology.md  _schema.md
domain_knowledge/_archive/: README.md
domain_knowledge/_legacy/: README.md
domain_knowledge/cn-sde-jobhunt/: blindspots.md  decisions.md  domain_pack.md  framings.md  sources.yaml
domain_knowledge/entrepreneurship/: blindspots.md  decisions.md  sources.yaml
domain_knowledge/health-insurance/: decisions.md  sources.yaml
domain_knowledge/housing/: sources.yaml
domain_knowledge/immigration/: domain_pack.md  framings.md  (+1 more)
fixtures/: eval_situations.yaml
refinements/: log.jsonl  pending-push-20260518-0206-final.json  pending-push-20260518-0206.json  pending-push-20260518-231730.json  pending-push-20260519-0712.json
(+240 files in other folders)
