[project]
name = "blindspot"
version = "0.1.0"
description = "Decision-aware advisor surfacing unknown unknowns from curated community sources."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "sqlalchemy>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "feedparser>=6.0",
    "praw>=7.7",
    "beautifulsoup4>=4.12",
    "claude-agent-sdk>=0.1.0",
    "anthropic>=0.40.0",
    "voyageai>=0.2",
    "pydantic>=2.6",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest-mock>=3.12",
]

[project.scripts]
blindspot = "blindspot.cli:app"

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
